src/objects/cnotify__Notification__c.object
<CustomObject>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>CL_Contract__r.loan__Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cnotify__Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>cnotify__Configuration__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cnotify__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cnotify__Current_Amount_Due__c</fullName>
        <label>Current Amount Due</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cnotify__Message__c</fullName>
        <label>Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnotify__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Target_Object_Id__c</fullName>
        <label>Target Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Target_Object_Type__c</fullName>
        <label>Target Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Collection_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Activity</label>
        <referenceTo>collect__Collection_Activity__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send_Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Notification</label>
    <listViews>
        <fullName>cnotify__All</fullName>
        <columns>NAME</columns>
        <columns>cnotify__Account__c</columns>
        <columns>cnotify__Configuration__c</columns>
        <columns>cnotify__Email_Address__c</columns>
        <columns>cnotify__Phone_Number__c</columns>
        <columns>cnotify__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cnotify__Notification_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>cnotify__Configuration__c</columns>
        <columns>cnotify__Phone_Number__c</columns>
        <columns>cnotify__Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>Notification View</label>
    </listViews>
    <nameField>
        <displayFormat>N-{00000000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>